[refs #84441] Footer - fix overflow container.

--- a/src/eni/seis/theme/theme-south/src/less/south.less
+++ b/src/eni/seis/theme/theme-south/src/less/south.less
@@ -395,6 +395,7 @@ body.template-country_view {
         background: -webkit-linear-gradient(left, @color-gray-lighter, @color-gray-lighter 50%, @color-brand-south 50%, @color-brand-south);
         min-height: 250px;
         color: #FFFFFF;
+        overflow: auto;
     }
     .col-left {
         padding-top: 20px;
